test/langtools/tools/javac/enum/NestedEnum.out
NestedEnum.java:13:9: compiler.err.static.declaration.not.allowed.in.inner.classes
1 error
